--- a/.gitignore
+++ b/.gitignore
@@ -100,11 +100,11 @@ fabric.properties
 # Ignores the whole .idea folder and all .iml files
 # See https://github.com/joeblau/gitignore.io/issues/186 and https://github.com/joeblau/gitignore.io/issues/360
 
-.idea/
+
 
 # Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-249601023
 
-*.iml
+
 modules.xml
 .idea/misc.xml
 *.ipr
@@ -156,3 +156,4 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij+all,vaadin,windows,maven
+/.vscode/
