button for github and linkedin that open in a new tab
Signed-off-by: Shenna Risqianto Wilfred Piri <shennawew@outlook.com>

--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.vaadin.olli</groupId>
+            <artifactId>browser-opener</artifactId>
+            <version>0.5</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
