change openjdk version to buster from alpine
Signed-off-by: Shenna Risqianto Wilfred Piri <shennawew@outlook.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     image: dashboard
     container_name: dashboard
     restart: always
-    ports:
-      - 8080:8080
+    expose:
+      - 8080
     networks:
       - nginx
 
