--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "@vaadin/vaadin-avatar": "1.0.2",
     "cdigit": "2.5.6",
     "chance": "1.1.7",
-    "open": "^7.2.1"
+    "open": "^7.2.1",
+    "@flowingcode/font-awesome-iron-iconset": "2.2.0"
   },
   "devDependencies": {
     "webpack": "4.42.0",
@@ -127,7 +128,8 @@
       "@vaadin/vaadin-avatar": "1.0.2",
       "cdigit": "2.5.6",
       "chance": "1.1.7",
-      "open": "^7.2.1"
+      "open": "^7.2.1",
+      "@flowingcode/font-awesome-iron-iconset": "2.2.0"
     },
     "devDependencies": {
       "webpack-babel-multi-target-plugin": "2.3.3",
@@ -153,6 +155,6 @@
       "lit-css-loader": "0.0.4",
       "extract-loader": "5.1.0"
     },
-    "hash": "15779f85b6743cab2bc02465bddf9615c03898d2716660f2a93d47016e4f6e5e"
+    "hash": "8585a63715186de06b9c0fc6e0fc6331a7195cbd5337838a3160267fc21e3b57"
   }
 }
