add json org dependency for parsing openweathermap API
Signed-off-by: Shenna Risqianto Wilfred Piri <shennawew@outlook.com>

--- a/pom.xml
+++ b/pom.xml
@@ -96,11 +96,20 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
+        <!-- for custom icon-->
         <dependency>
             <groupId>com.flowingcode.addons</groupId>
             <artifactId>font-awesome-iron-iconset</artifactId>
             <version>2.2.0</version>
         </dependency>
+
+        <!-- for parsing weather from openweathermap -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20201115</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
