--- a/.gitignore
+++ b/.gitignore
@@ -157,3 +157,5 @@ $RECYCLE.BIN/
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij+all,vaadin,windows,maven
 /.vscode/
+
+src/main/resources/META-INF/resources/secret/
