--- a/.gitignore
+++ b/.gitignore
@@ -158,4 +158,4 @@ $RECYCLE.BIN/
 # End of https://www.toptal.com/developers/gitignore/api/intellij+all,vaadin,windows,maven
 /.vscode/
 
-src/main/resources/META-INF/resources/secret/*
+src/main/resources/META-INF/resources/secret/openweathermap_api
