--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,12 @@
             <version>20201115</version>
         </dependency>
 
+        <!-- for logging -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.14.0</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
