add github actions
Signed-off-by: Shenna Risqianto Wilfred Piri <shennawew@outlook.com>

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,10 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
         <vaadin.version>18.0.2</vaadin.version>
+
+        <sonar.projectKey>shennarwp_dashboard</sonar.projectKey>
+        <sonar.organization>shennarwp</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
 
     <parent>
