--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,11 +5,11 @@
 
 version: 2
 updates:
-  - package-ecosystem: "npm"
-    # Look for `package.json` and `lock` files in the `root` directory
-    directory: "/"
-    schedule:
-      interval: "daily"
+#  - package-ecosystem: "npm"
+#    # Look for `package.json` and `lock` files in the `root` directory
+#    directory: "/"
+#    schedule:
+#      interval: "daily"
 
   - package-ecosystem: "docker"
     # Look for a `Dockerfile` in the `root` directory
