--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,17 @@ server.port=${PORT:8080}
 logging.level.org.atmosphere = warn
 spring.mustache.check-template-location = false
 
+spring.datasource.url=jdbc:h2:./dashboard;AUTO_SERVER=TRUE
+spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.initialization-mode=always
+spring.datasource.platform=h2
+spring.datasource.username=user
+spring.datasource.password=pass
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.enabled=true
+
+
 # To improve the performance during development. 
 # For more information https://vaadin.com/docs/flow/spring/tutorial-spring-configuration.html#special-configuration-parameters
 # vaadin.whitelisted-packages= org/vaadin/example
