--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=${PORT:8080}
 logging.level.org.atmosphere = warn
 spring.mustache.check-template-location = false
 
-spring.datasource.url=jdbc:h2:./dashboard;AUTO_SERVER=TRUE
+spring.datasource.url=jdbc:h2:mem:dashboard
 spring.datasource.driverClassName=org.h2.Driver
 #spring.datasource.initialization-mode=always
 spring.datasource.platform=h2
